--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a id="nav-admissions" href="">Admission</a>
                 </div>
                 <div>
-                    <button>Contact</button>
+                    <button class="btn-primary">Contact</button>
                 </div>
 
             </section>
@@ -39,11 +39,11 @@
 
 
         </nav>
-        
-    <div class="marquee">
-        <p>আমার সোনার বাংলা, আমি তোমায় ভালোবাসি। চিরদিন তোমার আকাশ, তোমার বাতাস, আমার প্রাণে বাজায় বাঁশি॥ 
-       
-    </div>
+
+        <div class="marquee">
+            <p>আমার সোনার বাংলা, আমি তোমায় ভালোবাসি। চিরদিন তোমার আকাশ, তোমার বাতাস, আমার প্রাণে বাজায় বাঁশি॥
+
+        </div>
 
 
         <main>
@@ -53,7 +53,7 @@
                             class="hero-span-2">towards vision</span></p>
                     <p class="hero-text-2">With the courage, Confidence, Creativity and Compassion to make their Unique
                         Contribution in a Diverse and Dynamic World.</p>
-                    <button>Enroll Now</button>
+                    <button class="btn-primary">Enroll Now</button>
                 </div>
                 <div>
                     <img src="assets/hero-kids.png" alt="">
@@ -95,13 +95,94 @@
             </div>
 
         </div>
-        <div class="secnd-container-btn">
-            <button><</button>
-            <button>></button>
+        <div class="secnd-container-btn ">
+            <button class="btn-primary"><</button>
+            <button class="btn-primary">></button>
         </div>
 
     </section>
 
+    <!-- 3rd slide -->
+
+    <section class="third-container">
+        <div>
+            <p class="third-container-p">Our Stories</p>
+        </div>
+        <div class="third-container-partation">
+            <div class="third-container-1st-partition">
+                <img src="assets/story-1.png" alt="">
+                <button id="third-container-1st-partition-btn">January 01, 2019</button>
+                <h4 class="third-container-1st-partition-p1">A fun toddler coloring training on classroom</h4>
+                <p class="third-container-1st-partition-p2">Beautiful branding for changes by Never Now in Australia.
+                    changes is a platform for open discussion in an inclusive and
+                    collaborative environment, providing the...</p>
+            </div>
+            <div class="third-container-2nd-partition">
+                <div class="third-container-2nd-partition-box">
+                    <img src="assets/story-2.png" alt="">
+                    <button class="third-container-2nd-partition-btn">January 25, 2019</button>
+                    <p>Find out if a school fits the
+                        family’s needs</p>
+                </div>
+                <div class="third-container-2nd-partition-box">
+                    <img src="assets/story-3.png" alt="">
+                    <button class="third-container-2nd-partition-btn">May 15, 2019</button>
+                    <p>Summer math & literacy
+                        centres for kids</p>
+                </div>
+                <div class="third-container-2nd-partition-box">
+                    <img src="assets/story-4.png" alt="">
+                    <button class="third-container-2nd-partition-btn">July 20, 2019</button>
+                    <p>Classroom management
+                        techniques for new tutors</p>
+
+                </div>
+                <div class="third-container-2nd-partition-box">
+                    <img src="assets/story-5.png" alt="">
+                    <button class="third-container-2nd-partition-btn">November 19, 2019</button>
+                    <p>Conversation rhymes
+                        improve kids listening</p>
+                </div>
+            </div>
+        </div>
+        <div>
+            <button class="View-all-btn btn-primary">View All</button>
+        </div>
+    </section>
+    <!-- footer -->
+
+    <footer>
+        <section class="footer-container">
+            <div class="footer-1st-box">
+                <div class="footer-logo-box">
+                    <img src="assets/logo.png" alt="">
+                    <p>Kids Education</p>
+                </div>
+                <div class="footer-text-box">
+                    <p>Bangladesh faces a number of challenges in providing accessible and quality education to all
+                        children and adolescents</p>
+                </div>
+            </div>
+            <div class="footer-about-box">
+                <p>About School</p>
+                <div class="footer-about-box-anchor">
+                    <a href="">Home</a>
+                    <a href="">About</a>
+                    <a href="">Facilities</a>
+                    <a href="">Admission</a>
+                </div>
+            </div>
+            <div class="footer-keep-in-touch">
+                <p>Keep In Touch</p>
+                <div class="footer-icon-box">
+                    <img src="assets/fb.png" alt="">
+                    <img src="assets/dribble.png" alt="">
+                    <img src="assets/twitter.png" alt="">
+                    <img src="assets/google+.png" alt="">
+                </div>
+            </div>
+        </section>
+    </footer>
 
 </body>
 
